BazBot bugfix